- fixed grids to columns would wrap. The RWD plugin disabled columns from wrapping.

--- a/RockWeb/Themes/Rock/Styles/theme.css
+++ b/RockWeb/Themes/Rock/Styles/theme.css
@@ -1977,6 +1977,7 @@ dl:not(.dl-horizontal) dd {
     7. Reusable classes
     8. Column Types
     9. Row Types
+    10. Responsive Overrides
 
 */
 .dropdown-menu > li.checkbox-row {
@@ -2482,6 +2483,14 @@ td.grid-col-actions {
 }
 .table > tbody > tr.grid-section-header:hover > td {
   background-color: #e3ded7 !important;
+}
+.table-responsive[data-pattern="priority-columns"] > .table > thead > tr > th,
+.table-responsive[data-pattern="priority-columns"] > .table > tbody > tr > th,
+.table-responsive[data-pattern="priority-columns"] > .table > tfoot > tr > th,
+.table-responsive[data-pattern="priority-columns"] > .table > thead > tr > td,
+.table-responsive[data-pattern="priority-columns"] > .table > tbody > tr > td,
+.table-responsive[data-pattern="priority-columns"] > .table > tfoot > tr > td {
+  white-space: inherit;
 }
 /*
     Used to manage styles for specific blocks.
